catkin_ws/logs/rgbd_slam/build.make.126.log
[  0%] Built target geometry_msgs_generate_messages_py
[  0%] Built target std_msgs_generate_messages_cpp
[  0%] Built target rosgraph_msgs_generate_messages_py
[  0%] Built target geometry_msgs_generate_messages_lisp
[  0%] Built target roscpp_generate_messages_lisp
[  0%] Built target roscpp_generate_messages_py
[  0%] Built target roscpp_generate_messages_cpp
[  0%] Built target rosgraph_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_lisp
[  0%] Built target geometry_msgs_generate_messages_cpp
[  0%] Built target std_msgs_generate_messages_py
[  0%] Built target rosgraph_msgs_generate_messages_lisp
[  7%] [32mBuilding CXX object CMakeFiles/frontend.dir/src/FeatureDEM.cpp.o[0m
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/FeatureDEM.cpp: In static member function ‘static void FeatureDEM::extract(const cv::Mat&, const std::vector<cv::KeyPoint>&, cv::Mat&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/FeatureDEM.cpp:27:12: error: ‘waitKey’ was not declared in this scope
  waitKey(10);
            ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/FeatureDEM.cpp:27:12: note: suggested alternative:
In file included from /opt/opencv3/include/opencv2/opencv.hpp:55:0,
                 from /home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/FeatureDEM.cpp:9:
/opt/opencv3/include/opencv2/highgui.hpp:270:18: note:   ‘cv::waitKey’
 CV_EXPORTS_W int waitKey(int delay = 0);
                  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/FeatureDEM.cpp: In static member function ‘static void FeatureDEM::match(const std::vector<cv::KeyPoint>&, const cv::Mat&, const std::vector<cv::KeyPoint>&, const cv::Mat&, std::vector<int>&, std::vector<int>&)’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/rgbd_slam/src/FeatureDEM.cpp:42:32: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for(int i=0; i < matches.size(); ++i)
                                ^
make[2]: *** [CMakeFiles/frontend.dir/src/FeatureDEM.cpp.o] Error 1
make[1]: *** [CMakeFiles/frontend.dir/all] Error 2
make: *** [all] Error 2
